--- a/header-mobile.css
+++ b/header-mobile.css
@@ -79,7 +79,7 @@ display: none;
 .dropdown-item{
     text-decoration: none;
     font-size: 50px;
-    font-family: "Roboto", serif;
+    font-family: "Comfortaa", serif;
     color: #1D1D1D;
     line-height: 100px;
     margin-left: 10px;
@@ -107,7 +107,7 @@ display: none;
     font-size: 25px;
     color: #1D1D1D;
     text-decoration: none;
-    font-family: "Roboto", serif;
+    font-family: "Comfortaa", serif;
     margin-left: 10px;
     border: #1D1D1D solid 2px;
     border-radius: 5px;
