--- a/images.css
+++ b/images.css
@@ -39,3 +39,64 @@
     background-position: center;
     background-size: cover;
 }
+
+.tayna-image {
+    background-image: url('tayna.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.strah-image {
+    background-image: url('neva.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.pochta-image {
+    background-image: url('pochta.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.repeynik-image {
+    background-image: url('repeynik.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.romashek-image {
+    background-image: url('romashek.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.semm-image {
+    background-image: url('semm.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.tenn-image {
+    background-image: url('tenn.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.konec-image {
+    background-image: url('konec.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.vzglyad-image {
+    background-image: url('vzglyad.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.zhenih-image {
+    background-image: url('zhenih.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
