--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
+.loader {
+    width: 100%;
+    height: 100%;
+    background-color: #AD9A68;
+    border-radius: 40px;
+    display: inherit;
+}
 
 #changingimage {
     z-index: 1;
