--- a/main-mobile.css
+++ b/main-mobile.css
@@ -1,3 +1,41 @@
+.fulloader{
+    width: 100%;
+    height: 100%;
+    background-color: #AD9A68;
+    position: relative;
+    display: inherit; 
+    z-index: 3;
+}
+
+.loader {
+    width: 100%;
+    height: 100%;
+    background-color: #AD9A68;
+    border-radius: 40px;
+    display: inherit;
+}
+
+.loadelem {
+    width: 50px;
+    padding: 8px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    position:relative;
+    top: 40%;
+    margin: auto;
+    background: white;
+    --_m: 
+      conic-gradient(#0000 10%,#000),
+      linear-gradient(#000 0 0) content-box;
+    -webkit-mask: var(--_m);
+            mask: var(--_m);
+    -webkit-mask-composite: source-out;
+            mask-composite: subtract;
+    animation: l3 1s infinite linear;
+  }
+  @keyframes l3 {to{transform: rotate(1turn)}}
+
+
 #changingimage {
     z-index: 1;
     margin-top: 120px;
