--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
+.fulloader{
+    width: 96%;
+    height: 690px;
+    right: 30px;
+    background-color: #AD9A68;
+    position: absolute;
+    display: inherit; 
+    z-index: 1;
+}
+
 .loader {
     width: 100%;
     height: 100%;
@@ -25,7 +35,9 @@
     animation: l3 1s infinite linear;
   }
   @keyframes l3 {to{transform: rotate(1turn)}}
-
+  .ful{
+    top:0%;
+  }
 #changingimage {
     z-index: 1;
     margin-top: 120px;
