--- a/main-mobile.css
+++ b/main-mobile.css
@@ -1,11 +1,13 @@
 .fulloader{
-    width: 100%;
-    height: 100%;
+    width: 96%;
+    height: 690px;
+    right: 30px;
     background-color: #AD9A68;
-    position: relative;
+    position: absolute;
     display: inherit; 
-    z-index: 3;
+    z-index: 1;
 }
+
 
 .loader {
     width: 100%;
@@ -35,7 +37,9 @@
   }
   @keyframes l3 {to{transform: rotate(1turn)}}
 
-
+  .ful{
+    top:0%;
+  }
 #changingimage {
     z-index: 1;
     margin-top: 120px;
