--- a/main.css
+++ b/main.css
@@ -106,7 +106,7 @@
 }
 
 .image-about{
-    background-image: url('logo.svg');
+    background-image: url('logounfull.svg');
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
