--- a/main-mobile.css
+++ b/main-mobile.css
@@ -170,6 +170,11 @@
     animation-duration: 4s; */
 }
 
+.project-image img{
+    border-radius: 40px;
+    width: 100% ;
+    height:100% ;
+}
 .project-title{
     font-family: 'Coda', system-ui;
     color:white;
