--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@
     background-color: #AD9A68;
     border-radius: 40px;
     display: inherit;
+    position:relative;
 }
 
 .loadelem {
@@ -162,13 +163,19 @@
     height:400px;
 }
 
+
 .project-image{
-    width: 100%;
-    height:350px;
+    width: 100% ;
+    height:350px ;
     margin: 5px 5px 10px 5px;
     border-radius: 40px;
-    /* animation-name: fading;
-    animation-duration: 4s; */
+}
+
+
+.project-image img{
+    border-radius: 40px;
+    width: 100% ;
+    height:100% ;
 }
 
 .project-title{
