--- a/main-mobile.css
+++ b/main-mobile.css
@@ -174,6 +174,7 @@
     border-radius: 40px;
     width: 100% ;
     height:100% ;
+    display:none;
 }
 .project-title{
     font-family: 'Coda', system-ui;
