--- a/main.css
+++ b/main.css
@@ -13,8 +13,9 @@
     height: 100%;
     background-color: #AD9A68;
     border-radius: 40px;
-    display: inherit;
-    position:relative;
+    display: block;
+    /* position:relative;
+    top: 0; */
 }
 
 .loadelem {
@@ -176,6 +177,7 @@
     border-radius: 40px;
     width: 100% ;
     height:100% ;
+    display:none;
 }
 
 .project-title{
