--- a/main-mobile.css
+++ b/main-mobile.css
@@ -102,7 +102,7 @@
 }
 
 .image-about{
-    background-image: url('logo.svg');
+    background-image: url('logounfull.svg');
     background-position: center;
     display: flex;
     align-self: center;
