--- a/main-mobile.css
+++ b/main-mobile.css
@@ -1,4 +1,4 @@
-.fulloader{
+/* .fulloader{
     width: 96%;
     height: 690px;
     right: 30px;
@@ -39,7 +39,7 @@
 
   .ful{
     top:0%;
-  }
+  } */
 #changingimage {
     z-index: 1;
     margin-top: 120px;
