--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-.fulloader{
+/* .fulloader{
     width: 96%;
     height: 690px;
     right: 30px;
@@ -15,7 +15,7 @@
     border-radius: 40px;
     display: block;
     /* position:relative;
-    top: 0; */
+    top: 0; 
 }
 
 .loadelem {
@@ -39,7 +39,7 @@
   @keyframes l3 {to{transform: rotate(1turn)}}
   .ful{
     top:0%;
-  }
+  } */
 #changingimage {
     z-index: 1;
     margin-top: 120px;
