--- a/main-mobile.css
+++ b/main-mobile.css
@@ -157,12 +157,12 @@
     display: grid;
     grid-template-columns: 1fr;
     justify-content: center;
-    grid-template-rows: 500px;
+    grid-template-rows: 300px;
     gap:5%;
     margin: auto 10% auto 10%;
 }
 .project{
-    height:450px;
+    height:300px;
 }
 
 .project-image{
@@ -178,10 +178,9 @@
     border-radius: 40px;
     width: 100% ;
     height:100% ;
-    display:none;
 }
 .project-title{
-    font-family: 'Coda', system-ui;
+    font-family: 'Arial', sans-serif;
     color:white;
     font-weight: 600;
     text-align: center;
@@ -189,7 +188,7 @@
     margin: 0;
 }
 .project-type{
-    font-family: 'Coda', system-ui;
+    font-family: 'Arial', sans-serif;
     color:white;
     font-weight: 400;
     text-align: center;
