--- a/main.css
+++ b/main.css
@@ -139,9 +139,21 @@
     height:350px ;
     margin: 5px 5px 10px 5px;
     border-radius: 40px;
-    background-color: #AD9A68;
+    background: linear-gradient(120deg,#e7e1ad,#ad9a68,#837b67);
+    background-size: 180% 180%;
+    animation: gradient-animation 15s ease infinite;
 }
-
+@keyframes gradient-animation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 
 .project-image img{
     border-radius: 40px;
