--- a/header.css
+++ b/header.css
@@ -40,6 +40,7 @@ transform: translateY(-50%);
 
 .logo {
     margin: 0;
+    object-fit: contain;
     float: left;
     height: 90px;
     width: 90px;
