--- a/main-mobile.css
+++ b/main-mobile.css
@@ -136,6 +136,7 @@
     border-radius: 40px;
     width: 100% ;
     height:100% ;
+    object-fit: cover;
 }
 .project-title{
     font-family: 'Arial', sans-serif;
