--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 
 #changingimage {
+    position: absolute;
     z-index: 1;
     margin-top: 120px;
     display:flex;
@@ -14,6 +15,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     padding-left: 30px;
+    left: 2.5%;
     text-decoration: underline;
 }
 
@@ -46,6 +48,9 @@
 
 .headerwrapper {
     padding: 60px;
+}
+.imagewrapper {
+    height: 690px;
 }
 
 .textblock {
@@ -159,6 +164,7 @@
     border-radius: 40px;
     width: 100% ;
     height:100% ;
+    object-fit: cover;
 }
 
 .project-title{
