--- a/header.css
+++ b/header.css
@@ -42,11 +42,12 @@ transform: translateY(-50%);
     margin: 0;
     object-fit: contain;
     float: left;
-    height: 90px;
-    width: 90px;
-    margin-top: 15px;
+    height: 120px;
+    width: 120px;
+    /* margin-top: 15px; */
     margin-left: 2.5%;
     margin-right: 150px;
+    margin-top: 5px;
 }
 
 .right {
@@ -56,5 +57,5 @@ transform: translateY(-50%);
 
 .left {
     float: left;
-    margin: auto 125px auto 0;
+    margin: auto 100px auto 0;
 }
